--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "image-model-storage",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "homepage": "",
   "author": {
@@ -19,6 +19,7 @@
     "storage"
   ],
   "devDependencies": {
+    "eslint-config-xo": "^0.16.0",
     "eslint-config-xo-space": "^0.14.0",
     "file-cloud-uploader": "0.0.5",
     "gulp": "^3.9.0",
